# ailab

./: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile.gazebo11  README.md  build_gazebo11.bash  dc_g11_nvidia.yml  dc_g11_vnc.yml  dc_g11_x11.yml  pull_images.bash  run_gazebo11.bash
docker/patches/: robotiq_85_gripper.transmission.xacro
launch/: arm_panda.launch  ur5e_2f85_control.launch.xml
launch/urdf/: ur5e_2f85.xacro  ur5e_2f85_macro.xacro  ur5e_macro.xacro
